--- a/paper.tex
+++ b/paper.tex
@@ -250,8 +250,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Seneca: Low Cost and Fast 
-Hyperparameter Search and Selection for Machine Learning Models}
+\title{Seneca: Fast, Low Cost Hyperparameter Search for Machine Learning Models}
 
 
 % author names and affiliations
