--- a/racelab.bib
+++ b/racelab.bib
@@ -9504,6 +9504,12 @@ Welsh, Matt and Brewer, Eric and others},
     month="Nov",
     year = "2017"
 }
+@misc{blind,
+    key = "blinded for submission/review",
+    title = "blinded for submission/review",
+    month="Feb",
+    year = "2019"
+}
 @inproceedings{centaurus17,
     author = "Golubovic, Nevena and Gill, Angad and Krintz, Chandra and Wolski, Rich",
     title = "CENTAURUS: A Cloud Service for K-means Clustering",
