--- a/ref.bib
+++ b/ref.bib
@@ -406,3 +406,10 @@ publisher = {{USENIX} Association},
   journal={arXiv preprint arXiv:1902.03383},
   year={2019}
 }
+@misc{blind,
+    key = "blinded for submission/review",
+    title = "blinded for submission/review",
+    month="Feb",
+    year = "2019"
+}
+
